[package]
name = "grrs"
version = "0.1.0"
authors = ["Willie Scholtz <williescholtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
colored = "2.0.0"
failure = "0.1.7"
exitfailure = "0.5.1"
